Implemented RoleUserController
